k8s/iot-laundry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-web
  template:
    metadata:
      labels:
        app: svc-web
    spec:
      containers:
      - name: svc-web
        image: kenahrens/svc-web
        imagePullPolicy: Never
        livenessProbe:
          httpGet:
            path: /stats
            port: 8888
          initialDelaySeconds: 5
          periodSeconds: 10
        ports:
        - containerPort: 8888
          protocol: TCP
        volumeMounts:
        - name: local-volume
          mountPath: /app/archive
      volumes:
      - name: local-volume
        hostPath:
          path: /hosthome/kahrens/Pictures/archive
          type: Directory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-predict
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-predict
  template:
    metadata:
      labels:
        app: svc-predict
    spec:
      containers:
      - name: svc-predict
        image: kenahrens/svc-predict
        imagePullPolicy: Never
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        ports:
        - containerPort: 5000
          protocol: TCP
