k8s/iot-laundry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-web
spec:
  type: NodePort
  selector:
    app: svc-web
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: svc-predict
spec:
  type: NodePort
  selector:
    app: svc-predict
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: svc-track
spec:
  type: NodePort
  selector:
    app: svc-track
  ports:
  - protocol: TCP
    port: 8889
    targetPort: 8889
---
apiVersion: v1
kind: Service
metadata:
  name: svc-ingest
spec:
  type: NodePort
  selector:
    app: svc-ingest
  ports:
  - protocol: TCP
    port: 8885
    targetPort: 8885
