k8s/iot-laundry-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: iot-laundry
spec:
  rules:
  - host: laundry.minikube
    http:
      paths:
      - backend:
          serviceName: iot-laundry
          servicePort: 8888
